remove selects and adding scrollers

--- a/app/index.html
+++ b/app/index.html
@@ -39,7 +39,7 @@
     </div>
 
     <!-- Add your site or application content here -->
-    <div class="container" ng-view="" style="padding-top:50px; padding-bottom: 50px"></div>
+    <div class="container" ng-view="" style="padding-bottom: 50px"></div>
 
     <div class="footer navbar navbar-default navbar-fixed-bottom">
       
