scroller and full flow logic

--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="bower_components/Font-Awesome/css/font-awesome.css" />
     <link rel="stylesheet" href="bower_components/qtip2/jquery.qtip.css" />
+    <link rel="stylesheet" href="spinningwheel/spinningwheel.css">
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css({.tmp,app}) styles/main.css -->
@@ -69,22 +70,27 @@
     <script src="bower_components/angular-resource/angular-resource.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-loader/angular-loader.js"></script>
+    <script src="spinningwheel/spinningwheel.js"></script>
+    <script src="phonegap.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
-        <!-- build:js({.tmp,app}) scripts/scripts.js -->
-        <script src="scripts/app.js"></script>
-        <script src="scripts/controllers/login.js"></script>
-        <script src="scripts/controllers/projectmgr.js"></script>
-        <script src="scripts/controllers/categorylist.js"></script>
-        <script src="scripts/controllers/questionlist.js"></script>
-        <script src="scripts/controllers/incidentreport.js"></script>
-        <script src="scripts/controllers/newuser.js"></script>
-        <script src="scripts/controllers/newproject.js"></script>
-        <script src="scripts/services/api.js"></script>
-        <script src="scripts/services/headersauthinterceptor.js"></script>
-        <script src="scripts/services/responseauthinterceptor.js"></script>
-        <script src="scripts/controllers/header.js"></script>
-        <!-- endbuild -->
+    <!-- build:js({.tmp,app}) scripts/scripts.js -->
+    <script src="scripts/app.js"></script>
+    <script src="scripts/controllers/login.js"></script>
+    <script src="scripts/controllers/projectmgr.js"></script>
+    <script src="scripts/controllers/categorylist.js"></script>
+    <script src="scripts/controllers/questionlist.js"></script>
+    <script src="scripts/controllers/incidentreport.js"></script>
+    <script src="scripts/controllers/newproject.js"></script>
+    <script src="scripts/services/api.js"></script>
+    <script src="scripts/services/headersauthinterceptor.js"></script>
+    <script src="scripts/services/responseauthinterceptor.js"></script>
+    <script src="scripts/controllers/header.js"></script>
+    <script src="scripts/controllers/newchecklist.js"></script>
+    <script src="scripts/controllers/checklistmgr.js"></script>
+    <script src="scripts/controllers/checklist.js"></script>
+    <script src="scripts/controllers/projectlist.js"></script>
+    <!-- endbuild -->
 </body>
 </html>
