api integration with categories an questions

--- a/app/index.html
+++ b/app/index.html
@@ -77,7 +77,6 @@
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-loader/angular-loader.js"></script>
     <script src="spinningwheel/spinningwheel.js"></script>
-    <script src="phonegap.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -97,6 +96,7 @@
     <script src="scripts/controllers/checklist.js"></script>
     <script src="scripts/controllers/projectlist.js"></script>
     <script src="scripts/controllers/footer.js"></script>
+    <script src="scripts/services/sharedata.js"></script>
     <!-- endbuild -->
 </body>
 </html>
