--- a/app/index.html
+++ b/app/index.html
@@ -44,10 +44,12 @@
 
     <div class="footer navbar navbar-default navbar-fixed-bottom" ng-controller="FooterCtrl">
       <div ng-show="hasFooter()">
-        <a href="javascript:void(0);" class="btn" ng-click="createProject()"><i class="fa fa-plus-circle fa-4x"></i></a>
-        <a href="javascript:void(0);" class="btn" ng-click="openProject()"><i class="fa fa-file fa-4x"></i></a>
-        <a href="javascript:void(0);" class="btn" ng-click="reportIncident()" ng-class="hasSelectedProject()"><i class="fa fa-medkit fa-4x" ></i></a>
-        <a href="javascript:void(0);" class="btn" ng-click="openCheckList()" ng-class="hasSelectedProject()"><i class="fa fa-list-ul fa-4x"></i></a>
+        <a href="javascript:void(0);" class="btn" ng-click="createProject()"><i class="fa fa-1x">Create Project</i></a>
+        <a href="javascript:void(0);" class="btn" ng-click="openProject()"><i class="fa fa-1x"></i>Open Project</a>
+        <a href="javascript:void(0);" class="btn" ng-click="reportIncident()" ng-class="hasSelectedProject()"><i class="fa fa-1x" >Incident Report</i></a>
+        <a href="javascript:void(0);" class="btn" ng-click="openCheckList()" ng-class="hasSelectedProject()"><i class="fa fa-1x">Open Checklist</i></a>
+        <a id = "pdf" href="javascript:void(0);"  download = "foo.pdf" class="btn" ng-click="downloadpdf()" 
+        ng-class="hasprojectandcheklist()" ><i class="fa fa-1x">Download Checklist</i></a>
       </div>
     </div>
 
